aws/dual-region/kubernetes/cadvisor-service-headless.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cadvisor-hl
spec:
  clusterIP: None
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cadvisor
  sessionAffinity: None
  type: ClusterIP
