aws/dual-region/kubernetes/elastic-metrics-headless.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9114"
    prometheus.io/scrape: "true"
  labels:
    app.kubernetes.io/component: metrics
    app.kubernetes.io/name: elasticsearch
  name: camunda-elasticsearch-metrics-hl
spec:
  clusterIP: None
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http-metrics
    port: 9114
    protocol: TCP
    targetPort: metrics
  selector:
    app.kubernetes.io/component: metrics
    app.kubernetes.io/name: elasticsearch
  sessionAffinity: None
  type: ClusterIP
