aws/dual-region/kubernetes/internal-dns-lb.yml
---
apiVersion: v1
kind: Service
metadata:
    labels:
        k8s-app: kube-dns
    name: internal-dns-lb
    namespace: kube-system
    annotations:
        service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: 'true'
        service.beta.kubernetes.io/aws-load-balancer-type: nlb
        service.beta.kubernetes.io/aws-load-balancer-internal: 'true'
spec:
    ports:
        - name: dns
          port: 53
          protocol: TCP
          targetPort: 53
    selector:
        k8s-app: kube-dns
    type: LoadBalancer
