aws/dual-region/kubernetes/optional-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dashboard.multi-saas.camunda.ie
    secretName: grafana-tls
  rules:
  - host: dashboard.multi-saas.camunda.ie
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: graf-grafana
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - monitor.multi-saas.camunda.ie
    secretName: prometheus-tls
  rules:
  - host: monitor.multi-saas.camunda.ie
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prom-prometheus-server
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: camunda-paris
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - zeebe.multi-saas.camunda.ie
    secretName: gateway-tls
  rules:
  - host: zeebe.multi-saas.camunda.ie
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: camunda-zeebe-gateway
            port:
              number: 26500
